--- a/src/main/resources/templates/store_mockup.html
+++ b/src/main/resources/templates/store_mockup.html
@@ -3,25 +3,41 @@
     <head>
         <title>Re-Volt Store</title>
 
-<!--        <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen"/>-->
+        <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
 
         <style>
             body {
-                background-color: #eeeee4;
+                background-image: url('/static/images/bkg.jpg');
+                background-repeat: no-repeat;
+                background-size: 100%;
+                background-attachment: fixed;
             }
             header {
-                background-color: #eeeee4;
-                background-image: url("/static/images/showcase.png");
+                background-color: white;
             }
             .navbar {
-                margin: auto;
-                width: 82%;
-                height: 5.2em;
+                background-color: white;
+                padding: 15px;
             }
-            .navbar .logo {
-                width: 17em;
+            .navbar .navbar-list {
+                text-align: center;
+                vertical-align: middle;
+                margin: auto;
+            }
+            .navbar .navbar-list .navbar-list-item {
+                margin-left: 3em;
+                margin-right: 3em;
+                font-size: 25px;
+                text-decoration: none;
+                color: black;
+                padding: 10px;
+            }
+            .navbar .navbar-list .navbar-list-item:hover {
+                color: white;
+                background-color: black;
+                padding: 10px;
             }
             .container {
                 margin-top: 20px;
@@ -51,7 +67,7 @@
                 margin-bottom: 0.8em;
             }
             .card:hover {
-                box-shadow: 0px 0px 20px #000000;
+                box-shadow: 0px 0px 20px #ADD8E6;
                 -moz-transition: all 0.2s ease-in;
                 -o-transition: all 0.2s ease-in;
                 -webkit-transition: all 0.2s ease-in;
@@ -96,8 +112,11 @@
     <body>
         <header>
             <nav class="navbar">
-                <img class="logo" src="/static/images/logo.png" alt="logo.png"/>
-                <p>Navbar</p>
+                <div class="navbar-list">
+                    <a class="navbar-list-item" href="#">Cars</a>
+                    <a class="navbar-list-item" href="#">Tracks</a>
+                    <a class="navbar-list-item" href="#">Accessories</a>
+                </div>
             </nav>
         </header>
 
