--- a/src/main/resources/templates/store_test.html
+++ b/src/main/resources/templates/store_test.html
@@ -3,110 +3,10 @@
 <head>
     <title>Re-Volt Store</title>
 
-    <!--        <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen"/>-->
+<!--    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen"/>-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
-
-    <style>
-            body {
-                background-image: url('/images/bkg.jpg');
-                background-repeat: no-repeat;
-                background-size: 100%;
-                background-attachment: fixed;
-            }
-            header {
-                 background-color: white;
-            }
-            .navbar {
-                background-color: white;
-                padding: 15px;
-            }
-            .navbar .navbar-list {
-                text-align: center;
-                vertical-align: middle;
-                margin: auto;
-            }
-            .navbar .navbar-list .navbar-list-item {
-                margin-left: 3em;
-                margin-right: 3em;
-                font-size: 25px;
-                text-decoration: none;
-                color: black;
-                padding: 10px;
-            }
-            .navbar .navbar-list .navbar-list-item:hover {
-                color: white;
-                background-color: black;
-                padding: 10px;
-            }
-            .container {
-                margin-top: 20px;
-            }
-            .groupbox {
-                background-color: white;
-                border-radius: 5px;
-                padding: 10px;
-                margin-bottom: 0.5em;
-            }
-            .groupbox .groupbox-title {
-                font-size: 1em;
-                font-weight: 600;
-                margin-bottom: 10px;
-            }
-            .groupbox .groupbox-item {
-                margin: 0px;
-                font-size: 0.9em;
-            }
-            .groupbox .form-check-label {
-                margin: 0px;
-                font-size: 0.9em;
-            }
-            .card {
-                border: none;
-                border-radius: 5px;
-                margin-bottom: 0.8em;
-            }
-            .card:hover {
-                box-shadow: 0px 0px 20px #ADD8E6;
-                -moz-transition: all 0.2s ease-in;
-                -o-transition: all 0.2s ease-in;
-                -webkit-transition: all 0.2s ease-in;
-                transition: all 0.2s ease-in;
-            }
-            .card .card-img-top {
-                width: 15rem;
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 10px;
-            }
-            .card .card-body {
-                padding: 0px;
-            }
-            .card .card-body .card-title {
-                text-align: center;
-                font-weight: 600;
-                font-size: 1.5em;
-            }
-            .card-body .row {
-                padding: 0px;
-                margin-left: 25px;
-                margin-right: 25px;
-                margin-bottom: 10px;
-                font-size: 0.9em;
-            }
-            .card-body .row .col-sm-6 {
-                margin: 0px;
-                padding: 0px;
-            }
-            .card-body .row .col-sm-6 p {
-                margin: 0px;
-            }
-            .card-body .row .col-sm-6 .values {
-                text-align: right;
-            }
-        </style>
-
+    <link th:href="@{/css/store.css}" rel="stylesheet" />
 </head>
 
 <body>
