--- a/src/main/resources/templates/tracks.html
+++ b/src/main/resources/templates/tracks.html
@@ -1,11 +1,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>Re-Volt Store</title>
-
-        <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
-        <link href="/static/css/store.css" rel="stylesheet" />
+        <link th:href="@{/css/store.css}" rel="stylesheet" />
+        <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
+        <link th:href="@{/css/footer.css}" rel="stylesheet"/>
+        <title>Re-Volt Store</title>
     </head>
 
     <body>
@@ -13,32 +13,12 @@
 
         <div class="container">
             <div class="row">
-<!--                Filters box -->
                 <div class="col-sm-3">
                     <div class="groupbox">
                         <p class="groupbox-title">Difficulty</p>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="checkbox-Easy">
-                            <label class="form-check-label" for="checkbox-Easy">
-                                Easy
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="checkbox-Medium">
-                            <label class="form-check-label" for="checkbox-Medium">
-                                Medium
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="checkbox-Hard">
-                            <label class="form-check-label" for="checkbox-Hard">
-                                Hard
-                            </label>
-                        </div>
-			<div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="checkbox-Extreme">
-                            <label class="form-check-label" for="checkbox-Extreme">
-                                Extreme
+                        <div class="form-check" th:each="difficulty : ${difficulties}">
+                            <input class="form-check-input" type="checkbox" th:id="'checkbox-' + ${difficulty.difficulty}">
+                            <label class="form-check-label" th:text="|${difficulty.difficulty} (${difficultiesCounter.get(difficulty.difficulty) ?: '0'})|" th:for="'checkbox-' + ${difficulty.difficulty}">
                             </label>
                         </div>
                     </div>
@@ -46,63 +26,23 @@
                         <p class="groupbox-title">Length (m)</p>
                     </div>
                 </div>
-<!--                Contents box -->
                 <div class="col-sm-9">
                     <div class="row">
-                        <div class="col-sm-4">
+                        <div class="col-sm-4" th:each="track : ${tracks}">
                             <div class="card">
-                                <img class="card-img-top" alt="botanicalgarden.png" src="https://static.wikia.nocookie.net/revolt/images/6/69/Garden_infobox_thumbnail.png/revision/latest/scale-to-width-down/350?cb=20170618232853"/>
+                                <img class="card-img-top" th:src="@{'images/tracks/' + ${track.thumbnail.image}}" th:alt="${track.thumbnail.image}"/>
                                 <div class="card-body">
-                                    <p class="card-title">Botanical Garden</p>
+                                    <p class="card-title" th:text="${track.name}"></p>
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <p>Difficulty</p>
                                             <p>Length</p>
                                         </div>
+<!--                                        // TODO: Fix images/tracks/hood1.png size -->
                                         <div class="col-sm-6">
                                             <div class="values">
-                                                <p>Easy</p>
-                                                <p>323m</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-</div>
-                        <div class="col-sm-4">
-			<div class="card">
-                                <img class="card-img-top" alt="wildwest1.png" src="https://static.wikia.nocookie.net/revolt/images/b/b8/Wild_west_1_infobox_thumbnail2.png/revision/latest/scale-to-width-down/350?cb=20170618232859"/>
-                                <div class="card-body">
-                                    <p class="card-title">Ghost Town 1</p>
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <p>Difficulty</p>
-                                            <p>Length</p>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="values">
-                                                <p>Medium</p>
-                                                <p>324m</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-</div>
-                        <div class="col-sm-4">
-			<div class="card">
-                                <img class="card-img-top" alt="supermarket1.png" src="https://static.wikia.nocookie.net/revolt/images/b/bf/Market1_infobox_thumbnail.png/revision/latest/scale-to-width-down/350?cb=20170618232854"/>
-                                <div class="card-body">
-                                    <p class="card-title">SuperMarket 1</p>
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <p>Difficulty</p>
-                                            <p>Length</p>
-                                        </div>
-                                        <div class="col-sm-6">
-                                            <div class="values">
-                                                <p>Extreme</p>
-                                                <p>502m</p>
+                                                <p th:text="${track.difficulty.difficulty}"></p>
+                                                <p th:text="${track.length}"></p>
                                             </div>
                                         </div>
                                     </div>
@@ -113,5 +53,7 @@
                 </div>
             </div>
         </div>
+
+        <div th:replace="fragments/footer.html :: footer"></div>
     </body>
 </html>
