--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -23,3 +23,8 @@ header {
     background-color: black;
     padding: 10px;
 }
+.navbar .navbar-list a:active {
+    color: white;
+    background-color: black;
+    padding: 10px;
+}
