--- a/src/main/resources/templates/tracks.html
+++ b/src/main/resources/templates/tracks.html
@@ -1,59 +1,94 @@
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
-        <link th:href="@{/css/store.css}" rel="stylesheet" />
-        <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
-        <link th:href="@{/css/footer.css}" rel="stylesheet"/>
-        <title>Re-Volt Store</title>
-    </head>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
+    <link th:href="@{/css/cars.css}" rel="stylesheet"/>
+    <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
+    <title>Re-Volt Store</title>
+</head>
+<body>
+<div th:replace="fragments/navigation.html :: navigation"></div>
+<!-- // TODO: Description cells margin-top: 0px; -->
+<div class="container">
 
-    <body>
-        <div th:replace="fragments/navigation.html :: navigation"></div>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-3">
-                    <div class="groupbox">
-                        <p class="groupbox-title">Difficulty</p>
-                        <div class="form-check" th:each="difficulty : ${difficulties}">
-                            <input class="form-check-input" type="checkbox" th:id="'checkbox-' + ${difficulty.difficulty}">
-                            <label class="form-check-label" th:text="|${difficulty.difficulty} (${difficultiesCounter.get(difficulty.difficulty) ?: '0'})|" th:for="'checkbox-' + ${difficulty.difficulty}">
-                            </label>
-                        </div>
-                    </div>
-                    <div class="groupbox">
-                        <p class="groupbox-title">Length (m)</p>
-                    </div>
-                </div>
-                <div class="col-sm-9">
-                    <div class="row">
-                        <div class="col-sm-4" th:each="track : ${tracks}">
-                            <div class="card">
-                                <img class="card-img-top" th:src="@{'images/tracks/' + ${track.thumbnail.image}}" th:alt="${track.thumbnail.image}"/>
-                                <div class="card-body">
-                                    <p class="card-title" th:text="${track.name}"></p>
-                                    <div class="row">
-                                        <div class="col-sm-6">
-                                            <p>Difficulty</p>
-                                            <p>Length</p>
-                                        </div>
-<!--                                        // TODO: Fix images/tracks/hood1.png size -->
-                                        <div class="col-sm-6">
-                                            <div class="values">
-                                                <p th:text="${track.difficulty.difficulty}"></p>
-                                                <p th:text="${track.length}"></p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <details class="filter-box">
+        <summary>Filters</summary>
+        <div class="row">
+            <div class="col-2">
+                <p class="filter-title">Difficulty</p>
+                <div class="form-check" th:each="difficulty : ${difficulties}">
+                    <input class="form-check-input" type="checkbox" th:id="'checkbox-' + ${difficulty.difficulty}">
+                    <label class="form-check-label" th:text="|${difficulty.difficulty} (${difficultiesCounter.get(difficulty.difficulty) ?: '0'})|" th:for="'checkbox-' + ${difficulty.difficulty}">
+                    </label>
                 </div>
             </div>
+            <div class="col-sm">
+                <p class="filter-title">Length</p>
+                <input type="range" min="0" max="100" value="100">
+            </div>
         </div>
+    </details>
 
-        <div th:replace="fragments/footer.html :: footer"></div>
-    </body>
+    <h5 class="info">Viewing all tracks in the store.</h5>
+
+    <form class="order-container" action="/order-by">
+        <label for="order-by">Order by</label>
+        <select name="order-by" id="order-by">
+            <option>Id</option>
+            <option>Price</option>
+            <option>Name</option>
+            <option>Difficulty</option>
+            <option>Length</option>
+        </select>
+
+        <label>
+            <input style="display: inline;" type="radio" name="order" value="asc"/> ascending
+        </label>
+        <label>
+            <input type="radio" name="order" value="desc"/> descending
+        </label>
+
+        <input type="submit" value="Submit"/>
+    </form>
+
+    <table class="main-table">
+        <tr class="table-row-header">
+            <th>ID</th>
+            <th>Thumbnail</th>
+            <th>Specifications</th>
+            <th>Price</th>
+            <th>Cart</th>
+            <th>Wishlist</th>
+        </tr>
+        <tr class="table-row-content" th:each="track : ${tracks}">
+            <td class="table-item-id" th:text="${track.id}"></td>
+            <td class="table-item-thumbnail">
+                <img th:src="@{'/images/tracks/' + ${track.thumbnail.image}}" th:alt="${track.thumbnail.image}">
+            </td>
+            <td class="table-item-description">
+                <p class="name" th:text="${track.name}"></p>
+                <table>
+                    <tr class="mini-table-header">
+                        <th>Difficulty</th>
+                        <th>Length</th>
+                    </tr>
+                    <tr class="mini-table-data">
+                        <td th:text="${track.difficulty.difficulty}"></td>
+                        <td th:text="${track.length}"></td>
+                    </tr>
+                </table>
+            </td>
+            <td class="table-item-price">
+                <p th:text="'$' + ${track.price ?:'0.00'}"></p>
+            </td>
+            <td class="table-item-cart">
+                <a th:href="@{#}">Add to Cart</a>
+            </td>
+            <td class="table-item-wishlist">
+                <a th:href="@{#}">Add to Wishlist</a>
+            </td>
+        </tr>
+    </table>
+</div>
+</body>
 </html>
