--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -10,8 +10,8 @@
                     <div class="navbar-list">
                         <a class="navbar-list-item" th:href="@{/cars}">Cars</a>
                         <a class="navbar-list-item" th:href="@{/tracks}">Tracks</a>
-                        <a class="navbar-list-item" th:href="@{#}">View Cart</a>
-                        <a class="navbar-list-item" th:href="@{#}">View Wishlist</a>
+                        <a class="navbar-list-item" th:href="@{/cart}">View Cart</a>
+                        <a class="navbar-list-item" th:href="@{/wishlist}">View Wishlist</a>
                     </div>
                 </nav>
             </header>
