--- a/src/main/resources/static/css/navigation.css
+++ b/src/main/resources/static/css/navigation.css
@@ -14,16 +14,10 @@ header {
     margin-left: 3em;
     margin-right: 3em;
     font-size: 25px;
-    text-decoration: none;
-    color: black;
+    font-weight: bold;
     padding: 10px;
 }
 .navbar .navbar-list .navbar-list-item:hover {
-    color: white;
-    background-color: black;
-    padding: 10px;
-}
-.navbar .navbar-list a:active {
     color: white;
     background-color: black;
     padding: 10px;
