--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -2,6 +2,7 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
+        <script th:src="@{/js/eventHandler.js}"></script>
         <link th:href="@{/css/cars.css}" rel="stylesheet"/>
         <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
         <title>Re-Volt Store</title>
@@ -47,24 +48,26 @@
 
             <h5 class="info">Viewing all cars in the store.</h5>
 
-            <form class="order-container" action="order-by" method="post">
+            <form class="order-container">
                 <label for="order-by">Order by</label>
-                <select name="criteria" id="order-by">
-                    <option value="id">Id</option>
-                    <option value="price">Price</option>
-                    <option value="name">Name</option>
-                    <option value="engine_type">Engine type</option>
-                    <option value="rating">Rating</option>
-                    <option value="speed">Speed</option>
-                    <option value="acceleration">Acceleration</option>
-                    <option value="mass">Mass</option>
+                <select name="orderBy" id="order-by">
+                    <option value="1" th:selected="${orderBy == 1}">Id</option>
+                    <option value="2" th:selected="${orderBy == 2}">Price</option>
+                    <option value="3" th:selected="${orderBy == 3}">Name</option>
+                    <option value="4" th:selected="${orderBy == 4}">Engine type</option>
+                    <option value="5" th:selected="${orderBy == 5}">Rating</option>
+                    <option value="6" th:selected="${orderBy == 6}">Speed</option>
+                    <option value="7" th:selected="${orderBy == 7}">Acceleration</option>
+                    <option value="8" th:selected="${orderBy == 8}">Mass</option>
                 </select>
 
                 <label>
-                    <input style="display: inline;" type="radio" name="order" value="asc" checked/> ascending
+                    <input style="display: inline;" type="radio" name="direction" id="asc" value="asc" th:checked="${direction == 'asc'}"/>
+                    ascending
                 </label>
                 <label>
-                    <input type="radio" name="order" value="desc"/> descending
+                    <input type="radio" name="direction" id="desc" value="desc" th:checked="${direction == 'desc'}"/>
+                    descending
                 </label>
 
                 <input type="submit" value="Submit"/>
@@ -116,9 +119,10 @@
                         <a th:href="@{#}">Add to Cart</a>
                     </td>
                     <td class="table-item-wishlist">
-                        <form th:action="@{wishlist/} + ${car.wishlisted ? 'remove/' : 'add/'} + ${car.id}" method="post">
-                            <button type="submit" th:text="${car.wishlisted ? 'Remove from Wishlist' : 'Add to Wishlist'}"></button>
-                        </form>
+                        <button th:id="${'button' + car.id}"
+                                th:onclick="|handleWishlist('${car.id}')|"
+                                th:text="${car.wishlisted ? 'Remove from Wishlist' : 'Add to Wishlist'}">
+                        </button>
                     </td>
                 </tr>
             </table>
