--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -4,13 +4,14 @@
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
     <link th:href="@{/css/cars.css}" rel="stylesheet"/>
     <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
+    <link th:href="@{/css/wishlist.css}" rel="stylesheet"/>
     <title>Re-Volt Store</title>
 </head>
 <body>
 <div th:replace="fragments/navigation.html :: navigation"></div>
 
 <div class="container">
-    <h5>Your Cart is empty :(</h5>
+    <p class="message">Your Cart is empty. &#128532;</p>
 </div>
 </body>
 </html>
