--- a/src/main/resources/templates/tracks.html
+++ b/src/main/resources/templates/tracks.html
@@ -1,6 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
     <link th:href="@{/css/cars.css}" rel="stylesheet"/>
     <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
@@ -18,7 +19,9 @@
                 <p class="filter-title">Difficulty</p>
                 <div class="form-check" th:each="difficulty : ${difficulties}">
                     <input class="form-check-input" type="checkbox" th:id="'checkbox-' + ${difficulty.difficulty}">
-                    <label class="form-check-label" th:text="|${difficulty.difficulty} (${difficultiesCounter.get(difficulty.difficulty) ?: '0'})|" th:for="'checkbox-' + ${difficulty.difficulty}">
+                    <label class="form-check-label"
+                           th:text="|${difficulty.difficulty} (${difficultiesCounter.get(difficulty.difficulty) ?: '0'})|"
+                           th:for="'checkbox-' + ${difficulty.difficulty}">
                     </label>
                 </div>
             </div>
@@ -31,21 +34,24 @@
 
     <h5 class="info">Viewing all tracks in the store.</h5>
 
-    <form class="order-container" action="/order-by">
+    <form class="order-container">
         <label for="order-by">Order by</label>
-        <select name="order-by" id="order-by">
-            <option>Id</option>
-            <option>Price</option>
-            <option>Name</option>
-            <option>Difficulty</option>
-            <option>Length</option>
+        <select name="orderBy" id="order-by">
+            <option value="1" th:selected="${orderBy == 1}">Id</option>
+            <option value="2" th:selected="${orderBy == 2}">Price</option>
+            <option value="3" th:selected="${orderBy == 3}">Name</option>
+            <option value="9" th:selected="${orderBy == 9}">Difficulty</option>
+            <option value="10" th:selected="${orderBy == 10}">Length</option>
         </select>
 
         <label>
-            <input style="display: inline;" type="radio" name="order" value="asc"/> ascending
+            <input style="display: inline;" type="radio" name="direction" id="asc" value="asc"
+                   th:checked="${direction == 'asc'}"/>
+            ascending
         </label>
         <label>
-            <input type="radio" name="order" value="desc"/> descending
+            <input type="radio" name="direction" id="desc" value="desc" th:checked="${direction == 'desc'}"/>
+            descending
         </label>
 
         <input type="submit" value="Submit"/>
@@ -70,7 +76,7 @@
                 <table>
                     <tr class="mini-table-header">
                         <th>Difficulty</th>
-                        <th>Length</th>
+                        <th>Length (m)</th>
                     </tr>
                     <tr class="mini-table-data">
                         <td th:text="${track.difficulty.difficulty}"></td>
