--- a/src/main/resources/templates/wishlist.html
+++ b/src/main/resources/templates/wishlist.html
@@ -2,6 +2,7 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"></script>
+    <script th:src="@{/js/eventHandler.js}"></script>
     <link th:href="@{/css/cars.css}" rel="stylesheet"/>
     <link th:href="@{/css/navigation.css}" rel="stylesheet"/>
     <link th:href="@{/css/wishlist.css}" rel="stylesheet"/>
@@ -61,9 +62,10 @@
                         <a th:href="@{#}">Add to Cart</a>
                     </td>
                     <td class="table-item-wishlist">
-                        <form th:action="@{wishlist/remove/} + ${car.id}" method="post">
-                            <button type="submit">Remove from Wishlist</button>
-                        </form>
+                        <button th:id="${'button' + car.id}"
+                                th:onclick="|handleWishlist('${car.id}')|"
+                                th:text="${car.wishlisted ? 'Remove from Wishlist' : 'Add to Wishlist'}">
+                        </button>
                     </td>
                 </tr>
     </span>
