--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -15,12 +15,12 @@
 
     <details class="filter-box">
         <summary th:text="${filterWindow.getName()}">Filters</summary>
-        <div class="row" th:each="filterView : ${filterWindow.getFilterViews()}">
-            <div class="col-2">
+        <div class="row">
+            <div class="col-2" th:each="filterView : ${filterWindow.getFilterViews()}">
                 <p class="filter-title" th:text="${filterView.getName()}"></p>
                 <div class="form-check" th:each="filter : ${filterView.getItems()}">
                     <input class="form-check-input" th:type="${filter.getType()}"
-                           th:id="'checkbox-' + ${filter.getName()}">
+                           th:id="'checkbox-' + ${filter.getName()}" th:checked="${filter.isChecked()}">
                     <label class="form-check-label" th:for="'checkbox-' + ${filter.getName()}"
                            th:text="${filter.toString()}">
                     </label>
@@ -34,14 +34,10 @@
     <form class="order-container">
         <label for="order-by">Order by</label>
         <select name="orderBy" id="order-by">
-            <option value="1" th:selected="${orderBy == 1}">Id</option>
-            <option value="2" th:selected="${orderBy == 2}">Price</option>
-            <option value="3" th:selected="${orderBy == 3}">Name</option>
-            <option value="4" th:selected="${orderBy == 4}">Engine type</option>
-            <option value="5" th:selected="${orderBy == 5}">Rating</option>
-            <option value="6" th:selected="${orderBy == 6}">Speed</option>
-            <option value="7" th:selected="${orderBy == 7}">Acceleration</option>
-            <option value="8" th:selected="${orderBy == 8}">Mass</option>
+            <option th:each="orderByOption, iterator : ${orderByOptions}"
+                    th:value="${iterator.count}"
+                    th:text="${orderByOption}"
+                    th:selected="${orderBy == iterator.count}"></option>
         </select>
 
         <label>
